--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,34 +3,65 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@inproceedings{li2024culturepark,
+  title={CulturePark: Boosting Cross-cultural Understanding in Large Language Models},
+  author={Li, Cheng and Teney, Damien and Yang, Linyi and Wen, Qingsong and Xie, Xing and Wang, Jindong},
+  booktitle={Thirty-Eighth Annual Conference on Neural Information Processing Systems (NeurIPS)},
+  year={2024},
+  arxiv={https://arxiv.org/abs/2405.15145},
+  corr={true},
+  code={https://github.com/Scarelette/CulturePark}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@inproceedings{li2024culturellm,
+  title={Culturellm: Incorporating cultural differences into large language models},
+  author={Li, Cheng and Chen, Mengzhou and Wang, Jindong and Sitaram, Sunayana and Xie, Xing},
+  booktitle={Thirty-Eighth Annual Conference on Neural Information Processing Systems (NeurIPS)},
+  year={2024},
+  arxiv={https://arxiv.org/abs/2402.10946},
+  corr={true},
+  code={https://github.com/Scarelette/CultureLLM}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@inproceedings{li2024good,
+  title={The good, the bad, and why: Unveiling emotions in generative ai},
+  author={Li, Cheng and Wang, Jindong and Zhang, Yixuan and Zhu, Kaijie and Wang, Xinyi and Hou, Wenxin and Lian, Jianxun and Luo, Fang and Yang, Qiang and Xie, Xing},
+  booktitle={International Conference on Machine Learning (ICML)},
+  year={2024},
+  corr={true},
+  selected={true},
+  arxiv={https://arxiv.org/abs/2312.11111},
+  code={https://github.com/microsoft/promptbench}
+}
+
+@inproceedings{wang2024negativeprompt,
+  title={NegativePrompt: Leveraging Psychology for Large Language Models Enhancement via Negative Emotional Stimuli},
+  author={Wang, Xu and Li, Cheng and Chang, Yi and Wang, Jindong and Wu, Yuan},
+  booktitle={International Joint Conference on Artificial Intelligence (IJCAI)},
+  arxiv={https://arxiv.org/abs/2405.02814},
+  year={2024},
+  code={https://github.com/wangxu0820/NegativePrompt}
+}
+
+@article{li2023large,
+  title={Large language models understand and can be enhanced by emotional stimuli},
+  author={Li, Cheng and Wang, Jindong and Zhang, Yixuan and Zhu, Kaijie and Hou, Wenxin and Lian, Jianxun and Luo, Fang and Yang, Qiang and Xie, Xing},
+  journal={arXiv preprint arXiv:2307.11760},
+  year={2023}
+}
+
+@article{li2024mentalarena,
+  title={MentalArena: Self-play Training of Language Models for Diagnosis and Treatment of Mental Health Disorders},
+  author={Li, Cheng and Fung, May and Wang, Qingyun and Han, Chi and Li, Manling and Wang, Jindong and Ji, Heng},
+  journal={arXiv preprint arXiv:2410.06845},
+  year={2024}
+}
+
+@article{liu2025culturevlm,
+  title={CultureVLM: Characterizing and Improving Cultural Understanding of Vision-Language Models for over 100 Countries},
+  author={Liu, Shudong and Jin, Yiqiao and Li, Cheng and Wong, Derek F and Wen, Qingsong and Sun, Lichao and Chen, Haipeng and Xie, Xing and Wang, Jindong},
+  journal={arXiv preprint arXiv:2501.01282},
+  year={2025}
 }
 
 @article{PhysRev.47.777,
@@ -61,55 +92,3 @@
   inspirehep_id = {3255}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
-}
