--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,26 +3,6 @@
 
 @string{aps = {American Physical Society,}}
 
-@inproceedings{li2024culturepark,
-  title={CulturePark: Boosting Cross-cultural Understanding in Large Language Models},
-  author={Li, Cheng and Teney, Damien and Yang, Linyi and Wen, Qingsong and Xie, Xing and Wang, Jindong},
-  booktitle={Thirty-Eighth Annual Conference on Neural Information Processing Systems (NeurIPS)},
-  year={2024},
-  arxiv={https://arxiv.org/abs/2405.15145},
-  corr={true},
-  code={https://github.com/Scarelette/CulturePark}
-}
-
-@inproceedings{li2024culturellm,
-  title={Culturellm: Incorporating cultural differences into large language models},
-  author={Li, Cheng and Chen, Mengzhou and Wang, Jindong and Sitaram, Sunayana and Xie, Xing},
-  booktitle={Thirty-Eighth Annual Conference on Neural Information Processing Systems (NeurIPS)},
-  year={2024},
-  arxiv={https://arxiv.org/abs/2402.10946},
-  corr={true},
-  code={https://github.com/Scarelette/CultureLLM}
-}
-
 @inproceedings{li2024good,
   title={The good, the bad, and why: Unveiling emotions in generative ai},
   author={Li, Cheng and Wang, Jindong and Zhang, Yixuan and Zhu, Kaijie and Wang, Xinyi and Hou, Wenxin and Lian, Jianxun and Luo, Fang and Yang, Qiang and Xie, Xing},
@@ -30,65 +10,58 @@
   year={2024},
   corr={true},
   selected={true},
-  arxiv={https://arxiv.org/abs/2312.11111},
-  code={https://github.com/microsoft/promptbench}
-}
-
-@inproceedings{wang2024negativeprompt,
-  title={NegativePrompt: Leveraging Psychology for Large Language Models Enhancement via Negative Emotional Stimuli},
-  author={Wang, Xu and Li, Cheng and Chang, Yi and Wang, Jindong and Wu, Yuan},
-  booktitle={International Joint Conference on Artificial Intelligence (IJCAI)},
-  arxiv={https://arxiv.org/abs/2405.02814},
-  year={2024},
-  code={https://github.com/wangxu0820/NegativePrompt}
+  arxiv={2312.11111},
+  code={https://github.com/microsoft/promptbench},
+  preview={emotion_all.pdf}
 }
 
 @article{li2023large,
   title={Large language models understand and can be enhanced by emotional stimuli},
   author={Li, Cheng and Wang, Jindong and Zhang, Yixuan and Zhu, Kaijie and Hou, Wenxin and Lian, Jianxun and Luo, Fang and Yang, Qiang and Xie, Xing},
-  journal={arXiv preprint arXiv:2307.11760},
-  year={2023}
+  booktitle={IJCAI 2023 workshop on LLM},
+  year={2023},
+  arxiv={2307.11760},
+  preview={emotionprompt.pdf}
 }
 
-@article{li2024mentalarena,
-  title={MentalArena: Self-play Training of Language Models for Diagnosis and Treatment of Mental Health Disorders},
-  author={Li, Cheng and Fung, May and Wang, Qingyun and Han, Chi and Li, Manling and Wang, Jindong and Ji, Heng},
-  journal={arXiv preprint arXiv:2410.06845},
-  year={2024}
+@inproceedings{wang2024negativeprompt,
+  title={NegativePrompt: Leveraging Psychology for Large Language Models Enhancement via Negative Emotional Stimuli (*: Co-first Authors)},
+  author={Wang*, Xu and Li*, Cheng and Chang, Yi and Wang, Jindong and Wu, Yuan},
+  booktitle={International Joint Conference on Artificial Intelligence (IJCAI)},
+  arxiv={2405.02814},
+  year={2024},
+  code={https://github.com/wangxu0820/NegativePrompt},
+  preview={negativeprompt.pdf}
 }
 
-@article{liu2025culturevlm,
+@inproceedings{li2024culturellm,
+  title={Culturellm: Incorporating cultural differences into large language models},
+  author={Li, Cheng and Chen, Mengzhou and Wang, Jindong and Sitaram, Sunayana and Xie, Xing},
+  booktitle={Thirty-Eighth Annual Conference on Neural Information Processing Systems (NeurIPS)},
+  year={2024},
+  arxiv={2402.10946},
+  corr={true},
+  code={https://github.com/Scarelette/CultureLLM},
+  preview={culturellm.pdf}
+}
+
+@inproceedings{li2024culturepark,
+  title={CulturePark: Boosting Cross-cultural Understanding in Large Language Models},
+  author={Li, Cheng and Teney, Damien and Yang, Linyi and Wen, Qingsong and Xie, Xing and Wang, Jindong},
+  booktitle={Thirty-Eighth Annual Conference on Neural Information Processing Systems (NeurIPS)},
+  year={2024},
+  arxiv={2405.15145},
+  corr={true},
+  code={https://github.com/Scarelette/CulturePark},
+  preview={culturepark.pdf}
+}
+
+@inproceedings{liu2025culturevlm,
   title={CultureVLM: Characterizing and Improving Cultural Understanding of Vision-Language Models for over 100 Countries},
   author={Liu, Shudong and Jin, Yiqiao and Li, Cheng and Wong, Derek F and Wen, Qingsong and Sun, Lichao and Chen, Haipeng and Xie, Xing and Wang, Jindong},
-  journal={arXiv preprint arXiv:2501.01282},
-  year={2025}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+  booktitle={CVPR 2025 workshop on VLMs4ALL},
+  year={2025},
+  arxiv={2501.01282},
+  preview={culturevlm.pdf}
 }
 
