--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,7 @@
   selected={true},
   arxiv={2312.11111},
   code={https://github.com/microsoft/promptbench},
-  preview={emotion_all.pdf}
+  preview={emotion_all.png}
 }
 
 @article{li2023large,
@@ -21,7 +21,7 @@
   booktitle={IJCAI 2023 workshop on LLM},
   year={2023},
   arxiv={2307.11760},
-  preview={emotionprompt.pdf}
+  preview={emotionprompt.png}
 }
 
 @inproceedings{wang2024negativeprompt,
@@ -31,7 +31,7 @@
   arxiv={2405.02814},
   year={2024},
   code={https://github.com/wangxu0820/NegativePrompt},
-  preview={negativeprompt.pdf}
+  preview={negativeprompt.png}
 }
 
 @inproceedings{li2024culturellm,
@@ -42,7 +42,7 @@
   arxiv={2402.10946},
   corr={true},
   code={https://github.com/Scarelette/CultureLLM},
-  preview={culturellm.pdf}
+  preview={culturellm.png}
 }
 
 @inproceedings{li2024culturepark,
@@ -53,7 +53,7 @@
   arxiv={2405.15145},
   corr={true},
   code={https://github.com/Scarelette/CulturePark},
-  preview={culturepark.pdf}
+  preview={culturepark.png}
 }
 
 @inproceedings{liu2025culturevlm,
@@ -62,6 +62,6 @@
   booktitle={CVPR 2025 workshop on VLMs4ALL},
   year={2025},
   arxiv={2501.01282},
-  preview={culturevlm.pdf}
+  preview={culturevlm.png}
 }
 
