--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,7 +15,7 @@
   preview={emotion_all.png}
 }
 
-@article{li2023large,
+@inproceedings{li2023large,
   title={Large language models understand and can be enhanced by emotional stimuli},
   author={Li, Cheng and Wang, Jindong and Zhang, Yixuan and Zhu, Kaijie and Hou, Wenxin and Lian, Jianxun and Luo, Fang and Yang, Qiang and Xie, Xing},
   booktitle={IJCAI 2023 workshop on LLM},
@@ -65,3 +65,12 @@
   preview={culturevlm.png}
 }
 
+
+@inproceedings{li2024mentalarena,
+  title={MentalArena: Self-play Training of Language Models for Diagnosis and Treatment of Mental Health Disorders},
+  author={Li, Cheng and Fung, May and Wang, Qingyun and Han, Chi and Li, Manling and Wang, Jindong and Ji, Heng},
+  booktitle={ArXiv},
+  year={2024},
+  arxiv={2410.06845},
+  preview={mentalarena.png}
+}
