--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,8 @@
   selected={true},
   arxiv={2312.11111},
   code={https://github.com/microsoft/promptbench},
-  preview={emotion_all.png}
+  preview={emotion_all.png},
+  selected={true}
 }
 
 @inproceedings{li2023large,
@@ -42,7 +43,8 @@
   arxiv={2402.10946},
   corr={true},
   code={https://github.com/Scarelette/CultureLLM},
-  preview={culturellm.png}
+  preview={culturellm.png},
+  selected={true}
 }
 
 @inproceedings{li2024culturepark,
@@ -53,7 +55,8 @@
   arxiv={2405.15145},
   corr={true},
   code={https://github.com/Scarelette/CulturePark},
-  preview={culturepark.png}
+  preview={culturepark.png},
+  selected={true}
 }
 
 @inproceedings{liu2025culturevlm,
@@ -72,5 +75,6 @@
   booktitle={ArXiv},
   year={2024},
   arxiv={2410.06845},
-  preview={mentalarena.png}
+  preview={mentalarena.png},
+  selected={true}
 }
