add more papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -78,3 +78,41 @@
   preview={mentalarena.png},
   selected={true}
 }
+
+
+@inproceedings{zhang2021vil,
+  title={Vil-100: A new dataset and a baseline model for video instance lane detection},
+  author={Zhang, Yujun and Zhu, Lei and Feng, Wei and Fu, Huazhu and Wang, Mingqian and Li, Qingxia and Li, Cheng and Wang, Song},
+  booktitle={Proceedings of the IEEE/CVF international conference on computer vision},
+  pages={15681--15690},
+  year={2021},
+  corr={true},
+  preview={VIL-100.png}
+}
+
+@inproceedings{liu2024vision,
+  title={Vision-driven automated mobile gui testing via multimodal large language model},
+  author={Liu, Zhe and Li, Cheng and Chen, Chunyang and Wang, Junjie and Wu, Boyu and Wang, Yawen and Hu, Jun and Wang, Qing},
+  booktitle={ArXiv},
+  year={2024},
+  arxiv={2407.03037},
+  preview={Trident.png}
+}
+
+@inproceedings{chang2024adversarial,
+  title={Adversarial Testing for Visual Grounding via Image-Aware Property Reduction},
+  author={Chang, Zhiyuan and Li, Mingyang and Wang, Junjie and Li, Cheng and Wu, Boyu and Xu, Fanjiang and Wang, Qing},
+  booktitle={ArXiv},
+  year={2024},
+  arxiv={2403.01118},
+  preview={adversarial_testing.png}
+}
+
+@inproceedings{chang2024veglue,
+  title={VEglue: Testing Visual Entailment Systems via Object-Aligned Joint Erasing},
+  author={Chang, Zhiyuan and Li, Mingyang and Wang, Junjie and Li, Cheng and Wang, Qing},
+  booktitle={TOSEM},
+  year={2025},
+  arxiv={2403.02581},
+  preview={VEglue.png}
+}
